libsqlite3-sys/bindgen-bindings/bindgen_3.34.1_ext.rs

pub type sqlite3_rtree_dbl = f64;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_rtree_geometry {
    pub pContext: *mut ::core::ffi::c_void,
    pub nParam: ::core::ffi::c_int,
    pub aParam: *mut sqlite3_rtree_dbl,
    pub pUser: *mut ::core::ffi::c_void,
    pub xDelUser: ::core::option::Option<unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void)>,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_rtree_query_info {
    pub pContext: *mut ::core::ffi::c_void,
    pub nParam: ::core::ffi::c_int,
    pub aParam: *mut sqlite3_rtree_dbl,
    pub pUser: *mut ::core::ffi::c_void,
    pub xDelUser: ::core::option::Option<unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void)>,
    pub aCoord: *mut sqlite3_rtree_dbl,
    pub anQueue: *mut ::core::ffi::c_uint,
    pub nCoord: ::core::ffi::c_int,
    pub iLevel: ::core::ffi::c_int,
    pub mxLevel: ::core::ffi::c_int,
    pub iRowid: sqlite3_int64,
    pub rParentScore: sqlite3_rtree_dbl,
    pub eParentWithin: ::core::ffi::c_int,
    pub eWithin: ::core::ffi::c_int,
    pub rScore: sqlite3_rtree_dbl,
    pub apSqlParam: *mut *mut sqlite3_value,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Fts5Context {
    _unused: [u8; 0],
}
pub type fts5_extension_function = ::core::option::Option<
    unsafe extern "C" fn(
        pApi: *const Fts5ExtensionApi,
        pFts: *mut Fts5Context,
        pCtx: *mut sqlite3_context,
        nVal: ::core::ffi::c_int,
        apVal: *mut *mut sqlite3_value,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Fts5PhraseIter {
    pub a: *const ::core::ffi::c_uchar,
    pub b: *const ::core::ffi::c_uchar,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Fts5ExtensionApi {
    pub iVersion: ::core::ffi::c_int,
    pub xUserData: ::core::option::Option<
        unsafe extern "C" fn(arg1: *mut Fts5Context) -> *mut ::core::ffi::c_void,
    >,
    pub xColumnCount:
        ::core::option::Option<unsafe extern "C" fn(arg1: *mut Fts5Context) -> ::core::ffi::c_int>,
    pub xRowCount: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Context,
            pnRow: *mut sqlite3_int64,
        ) -> ::core::ffi::c_int,
    >,
    pub xColumnTotalSize: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Context,
            iCol: ::core::ffi::c_int,
            pnToken: *mut sqlite3_int64,
        ) -> ::core::ffi::c_int,
    >,
    pub xTokenize: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Context,
            pText: *const ::core::ffi::c_char,
            nText: ::core::ffi::c_int,
            pCtx: *mut ::core::ffi::c_void,
            xToken: ::core::option::Option<
                unsafe extern "C" fn(
                    arg1: *mut ::core::ffi::c_void,
                    arg2: ::core::ffi::c_int,
                    arg3: *const ::core::ffi::c_char,
                    arg4: ::core::ffi::c_int,
                    arg5: ::core::ffi::c_int,
                    arg6: ::core::ffi::c_int,
                ) -> ::core::ffi::c_int,
            >,
        ) -> ::core::ffi::c_int,
    >,
    pub xPhraseCount:
        ::core::option::Option<unsafe extern "C" fn(arg1: *mut Fts5Context) -> ::core::ffi::c_int>,
    pub xPhraseSize: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Context,
            iPhrase: ::core::ffi::c_int,
        ) -> ::core::ffi::c_int,
    >,
    pub xInstCount: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Context,
            pnInst: *mut ::core::ffi::c_int,
        ) -> ::core::ffi::c_int,
    >,
    pub xInst: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Context,
            iIdx: ::core::ffi::c_int,
            piPhrase: *mut ::core::ffi::c_int,
            piCol: *mut ::core::ffi::c_int,
            piOff: *mut ::core::ffi::c_int,
        ) -> ::core::ffi::c_int,
    >,
    pub xRowid:
        ::core::option::Option<unsafe extern "C" fn(arg1: *mut Fts5Context) -> sqlite3_int64>,
    pub xColumnText: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Context,
            iCol: ::core::ffi::c_int,
            pz: *mut *const ::core::ffi::c_char,
            pn: *mut ::core::ffi::c_int,
        ) -> ::core::ffi::c_int,
    >,
    pub xColumnSize: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Context,
            iCol: ::core::ffi::c_int,
            pnToken: *mut ::core::ffi::c_int,
        ) -> ::core::ffi::c_int,
    >,
    pub xQueryPhrase: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Context,
            iPhrase: ::core::ffi::c_int,
            pUserData: *mut ::core::ffi::c_void,
            arg2: ::core::option::Option<
                unsafe extern "C" fn(
                    arg1: *const Fts5ExtensionApi,
                    arg2: *mut Fts5Context,
                    arg3: *mut ::core::ffi::c_void,
                ) -> ::core::ffi::c_int,
            >,
        ) -> ::core::ffi::c_int,
    >,
    pub xSetAuxdata: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Context,
            pAux: *mut ::core::ffi::c_void,
            xDelete: ::core::option::Option<unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void)>,
        ) -> ::core::ffi::c_int,
    >,
    pub xGetAuxdata: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Context,
            bClear: ::core::ffi::c_int,
        ) -> *mut ::core::ffi::c_void,
    >,
    pub xPhraseFirst: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Context,
            iPhrase: ::core::ffi::c_int,
            arg2: *mut Fts5PhraseIter,
            arg3: *mut ::core::ffi::c_int,
            arg4: *mut ::core::ffi::c_int,
        ) -> ::core::ffi::c_int,
    >,
    pub xPhraseNext: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Context,
            arg2: *mut Fts5PhraseIter,
            piCol: *mut ::core::ffi::c_int,
            piOff: *mut ::core::ffi::c_int,
        ),
    >,
    pub xPhraseFirstColumn: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Context,
            iPhrase: ::core::ffi::c_int,
            arg2: *mut Fts5PhraseIter,
            arg3: *mut ::core::ffi::c_int,
        ) -> ::core::ffi::c_int,
    >,
    pub xPhraseNextColumn: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Context,
            arg2: *mut Fts5PhraseIter,
            piCol: *mut ::core::ffi::c_int,
        ),
    >,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Fts5Tokenizer {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fts5_tokenizer {
    pub xCreate: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut ::core::ffi::c_void,
            azArg: *mut *const ::core::ffi::c_char,
            nArg: ::core::ffi::c_int,
            ppOut: *mut *mut Fts5Tokenizer,
        ) -> ::core::ffi::c_int,
    >,
    pub xDelete: ::core::option::Option<unsafe extern "C" fn(arg1: *mut Fts5Tokenizer)>,
    pub xTokenize: ::core::option::Option<
        unsafe extern "C" fn(
            arg1: *mut Fts5Tokenizer,
            pCtx: *mut ::core::ffi::c_void,
            flags: ::core::ffi::c_int,
            pText: *const ::core::ffi::c_char,
            nText: ::core::ffi::c_int,
            xToken: ::core::option::Option<
                unsafe extern "C" fn(
                    pCtx: *mut ::core::ffi::c_void,
                    tflags: ::core::ffi::c_int,
                    pToken: *const ::core::ffi::c_char,
                    nToken: ::core::ffi::c_int,
                    iStart: ::core::ffi::c_int,
                    iEnd: ::core::ffi::c_int,
                ) -> ::core::ffi::c_int,
            >,
        ) -> ::core::ffi::c_int,
    >,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct fts5_api {
    pub iVersion: ::core::ffi::c_int,
    pub xCreateTokenizer: ::core::option::Option<
        unsafe extern "C" fn(
            pApi: *mut fts5_api,
            zName: *const ::core::ffi::c_char,
            pContext: *mut ::core::ffi::c_void,
            pTokenizer: *mut fts5_tokenizer,
            xDestroy: ::core::option::Option<unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void)>,
        ) -> ::core::ffi::c_int,
    >,
    pub xFindTokenizer: ::core::option::Option<
        unsafe extern "C" fn(
            pApi: *mut fts5_api,
            zName: *const ::core::ffi::c_char,
            ppContext: *mut *mut ::core::ffi::c_void,
            pTokenizer: *mut fts5_tokenizer,
        ) -> ::core::ffi::c_int,
    >,
    pub xCreateFunction: ::core::option::Option<
        unsafe extern "C" fn(
            pApi: *mut fts5_api,
            zName: *const ::core::ffi::c_char,
            pContext: *mut ::core::ffi::c_void,
            xFunction: fts5_extension_function,
            xDestroy: ::core::option::Option<unsafe extern "C" fn(arg1: *mut ::core::ffi::c_void)>,
        ) -> ::core::ffi::c_int,
    >,
}
